# QuantumStockOptimization

./: FINAL_REPORT.md  README.md  STATUS.md
Markowitz/: .gitignore  CMakeLists.txt  Makefile  main  main.cpp  markowitz.cpp  markowitz.h  stock_data.cpp  stock_data.h
Markowitz/Tests/: averages.csv  covariance.csv  prices.csv
Markowitz/stockdev/: main.cpp  makefile  stock_data.cpp  stock_data.hpp
Markowitz/stockdev/DataSave/: Bitcoin-Cash_history.txt  Bitcoin-Cash_price.txt  Bitcoin_history.txt  Bitcoin_price.txt  Ethereum_price.txt  Litecoin_history.txt  Litecoin_price.txt  Ripple_price.txt  Tether_price.txt  currencies.txt
Markowitz/stockdev/DataSave/DataSave/: Ethereum_history.txt  Ripple_history.txt  Tether_history.txt
